# transpeg

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
transpeg/: __init__.py  main.py
