[pycodestyle]
max-line-length = 100

[flake8]
max-line-length = 100

[metadata]
name = transpeg
author = igrmk
author_email = igrmkx@gmail.com
description = Transparent JPEG emulation via SVG
long_description_content_type = text/markdown
url = https://github.com/igrmk/transpeg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires = >= 3.0
install_requires =
    importlib_metadata; python_version < "3.8"
    pillow >= 7.0.0
    svgwrite >= 1.4

[options.entry_points]
console_scripts = transpeg = transpeg.main:main
